kubernetes-networks/canary/ingress-canary.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: "canary"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  -
    host: testweb.io
    http:
      paths:
      - path: /web
        pathType: Prefix
        backend:
          serviceName: canary-svc
          servicePort: 8000
