kubernetes-networks/canary/web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  -
    host: testweb.io
    http:
      paths:
      - path: /web
        pathType: Prefix
        backend:
          serviceName: web-svc
          servicePort: 8000
